@@ -1,3 +1,9 @@
+2008-10-04  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
+	Create the parent directory before copying the old bookmarks file
+	to the new location. Closes #554995.
+
 2008-09-22  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: post-release bump to 2.24.1
